# unx_algorithm

./: .clang-format  .editorconfig  CMakeLists.txt  README.md
cmake/Modules/: MSVCLinkToStaticRuntime.cmake  MSVCPermissiveBehavior.cmake
src.single/: CMakeLists.txt  template.cc
src.single/term1/week3/: ex1.cc  ex4.cc
